Changed NLog and Newtonsoft.Json to be obtained via NuGet. NuGet.exe is automatically downloaded if it doesn't exist. TopShelf and the program as a whole uses NLog for logging.

--- a/newrelic_perfmon_plugin/App.config
+++ b/newrelic_perfmon_plugin/App.config
@@ -6,4 +6,12 @@
     <!--<appSettings>
         <add key="guid" value="com.custom.guid" />
     </appSettings>-->
+    <runtime>
+        <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+            <dependentAssembly>
+                <assemblyIdentity name="NLog" publicKeyToken="5120e14c03d0593c" culture="neutral"/>
+                <bindingRedirect oldVersion="0.0.0.0-3.2.0.0" newVersion="3.2.0.0"/>
+            </dependentAssembly>
+        </assemblyBinding>
+     </runtime>
 </configuration>
