--- a/newrelic_perfmon_plugin/packages.config
+++ b/newrelic_perfmon_plugin/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Topshelf" version="3.1.3" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net40" />
+  <package id="NLog" version="3.2.0.0" targetFramework="net40" />
+  <package id="Topshelf" version="3.1.4" targetFramework="net40" />
+  <package id="Topshelf.NLog" version="3.1.4" targetFramework="net40" />
 </packages>
